# sparse-kernel

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  codeql.yml  docs-agent.yml  install-smoke.yml  npm-telegram-beta-e2e.yml  openclaw-cross-os-release-checks-reusable.yml  openclaw-live-and-e2e-checks-reusable.yml  openclaw-release-checks.yml  openclaw-scheduled-live-checks.yml  parity-gate.yml  qa-live-transports-convex.yml  test-performance-agent.yml
crates/sparsekernel-cli/: Cargo.toml
crates/sparsekernel-cli/src/: lib.rs
crates/sparsekernel-core/: Cargo.toml
crates/sparsekernel-core/migrations/: 0003_resource_lease_metadata.sql
crates/sparsekernel-core/src/: lib.rs
docs/: ci.md
docs/architecture/: artifact-store.md  browser-broker.md  four-gb-vm-design.md  local-agent-kernel.md  security-boundaries.md  sparsekernel.md  tool-broker.md  trust-zones.md
docs/reference/: test.md
examples/book-writing-swarm/: README.md
examples/coding-harness-pool/: README.md
git-hooks/: pre-commit
migrations/: 0001_initial.sql  0002_browser_targets_observations.sql  0004_resource_budgets.sql
schemas/: sparsekernel.capabilities.schema.json  sparsekernel.events.schema.json  sparsekernel.openapi.yaml
scripts/: changed-lanes.mjs  changelog-add-unreleased.ts  check-changed.mjs  check-extension-package-tsc-boundary.mjs  check-sparsekernel-openapi.mjs  check-workflows.mjs  check.mjs  ci-changed-scope.d.mts  ci-changed-scope.mjs  docs-list.js  prepare-extension-package-boundary-artifacts.mjs  run-oxlint.mjs  run-vitest.mjs  sparsekernel-acceptance.mjs  stage-bundled-plugin-runtime-deps.mjs  sync-plugin-versions.ts  test-projects.test-support.mjs
src/agents/: session-tool-result-guard-wrapper.ts  session-tool-result-guard.transcript-events.test.ts
src/cli/: runtime-cli.ts
src/commands/: runtime.sparsekernel.test.ts  runtime.ts
src/config/: sessions.ts
src/local-kernel/: artifact-store.ts  browser-broker.ts  browser-cdp-live.test.ts  browser-managed-cdp.test.ts  browser-managed-cdp.ts  browser-process-pool.test.ts  browser-process-pool.ts  browser-tool-cdp-proxy.ts  browser-tool-proxy.ts  database.test.ts  database.ts  egress-proxy-supervisor.ts  egress-proxy.test.ts  egress-proxy.ts  hard-egress-firewall.ts  index.ts  network-policy.ts  paths.ts  plugin-worker-harness.test.ts  plugin-worker-harness.ts  run-ledger-runtime.test.ts  run-ledger-runtime.ts  runtime-doctor.ts  sandbox-broker-runtime.ts  sandbox-broker.ts  sandbox-contracts.ts  schema.ts  session-compat.ts  tool-broker-runtime.ts  tool-broker.test.ts  tool-broker.ts  types.ts  worker-identity-provision.ts
src/plugins/: registry.ts  (+4 more)
test/: git-hooks-pre-commit.test.ts
(+29 files in other folders)
