[package]
name = "sparsekernel-core"
version = "0.1.0"
edition.workspace = true
description = "SparseKernel ledger, broker, and artifact primitives for OpenClaw"
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = ">=1.20.0, <1.21.0", features = ["v4"] }

[dev-dependencies]
tempfile = { version = "3", default-features = false }
